package Lab1.src.Lab2;

public class Main {
    public static void main(String[] args) {
        System.out.println("Hello world!");
    }
}