package Lab1.src.lab4.Task1;

public class Bus extends Car {

    public Bus(String brand, String color, Engine engine) {
        super(brand, CarType.BUS, color, engine);
    }

}

