package Lab1.src.lab4.Task1;

public class Sedan extends Car{
    public Sedan(String brand, String color, Engine engine) {
        super(brand, CarType.SEDAN, color, engine);
    }
}
