package Lab1.src.lab4.Task1;

public class Special extends Car{

    public Special(String brand, String color, Engine engine) {
        super(brand, CarType.SPECIAL, color, engine);
    }
}
