package Lab1.src.lab4.Task8;

import java.awt.*;

public class Axis {

    private Point position;
    private double scale;

    public Axis(Point position, double scale) {
        this.position = position;
        this.scale = scale;
    }

    // Геттеры и сеттеры
    public double getScale() {
        return scale;
    }

    public void setScale(double scale) {
        this.scale = scale;
    }

    public void draw(){

    }
}
