package Lab1.src.lab4.Task8;

import java.awt.*;

public class Curve {

    private Point[] points;

    private String color;

    public Curve(Point[] points, String color) {
        this.points = points;
        this.color = color;
    }

}
