package Lab1.src.lab4.Task8;

public class Graph {
    double xMin, xMax;
    double yMin, yMax;
    double xStep, yStep;

    public Graph(double xMin, double xMax, double yMin, double yMax, double xStep, double yStep){
        this.xMin = xMin;
        this.xMax = xMax;
        this.yMin = yMin;
        this.yMax = yMax;
        this.xStep = xStep;
        this.yStep = yStep;
    }

    public void addCurve(){

    }

    public void draw(){

    }

}
